<resources>
    <string name="app_name">Smartstops</string>

    <string name="welcome_to_smartstops">Welcome to SmartStops</string>
    <string name="welcome_description">Sign up is not necessary if you don\'t mind not to receive our updates, but would you mind to read our Terms and conditions before using the app?</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="i_fully_understand_and_agree">I FULLY UNDERSTAND AND AGREE</string>
    <string name="warning_1">Do not attempt to adjust this device for any reason while driving your vehicle.Failure to pay full attention to the operation of your vehicle could result in death.
    serious injury, or property damage. By clicking the agree bar you understand and agree to assume full responsibility and risk for using this app.</string>
    <string name="warning">WARNING !</string>
    <string name="i_understand_and_agree">I UNDERSTAND AND AGREE</string>
    <string name="sign_in">SIGN IN</string>
    <string name="be_in_the_know">Be in the Know!</string>
    <string name="get_free_update_on_newly_added_locations">Get free update on newly added locations.</string>
    <string name="you_can_unsubscribe_any_time">You can unsubscribe any time.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">USERNAME</string>
    <string name="country">COUNTRY</string>
    <string name="email_id">EMAIL ID</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="report_an_inaccuracy">Report an Inaccuracy</string>
    <string name="city_province_and_country">CITY, PROVINCE AND COUNTRY</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="describe_the_inaccuracy">DESCRIBE THE INACCURACY</string>
    <string name="submit_your_feedback">SUBMIT YOUR FEEDBACK</string>
    <string name="report_text_top">We strive to avoid inaccuracies. However, on occasion highway improvement construction may change location of pullouts. We value your contributions and help in notifying us should you notice such a change.</string>
    <string name="report_text_bottom">We appreciate your help. We will concentrate on addressing the inaccuracy but, unless we need clarification, we will not respond to you personally.</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_maps">Map</string>
    <string name="_911">911</string>
    <string name="search">Search...</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="this_app_needs">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="goto_settings">GOTO SETTINGS</string>
    <string name="need_permission">Need Permissions</string>
    <string name="_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_categories_map">Map</string>

    <string name="link"><a href="Read our Privacy Policy" rel="nofollow"></a></string>
    <string name="update">Update</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">Please update to latest version</string>
    <string name="password">PASSWORD</string>

    <string name="waypoint_id">WAYPOINT ID</string>

    <string name="all_permissions_denied_feedback">Without this permission app may not work properly.</string>
    <string name="permission_rationale_title">We need this permission</string>
    <string name="permission_rationale_message">Without this permission app may not work properly and may crash.</string>
    <string name="permission_rationale_settings_button_text"></string>
    <string name="title_activity_sub_category">SubCategoryActivity</string>

    <string name="settings">Settings</string>
    <string name="error_select_longer_route">Please select a longer route</string>
    <string name="default_unit_type" translatable="false">default_for_device</string>
    <string name="default_locale" translatable="false">default_for_device</string>
    <string name="language_key" translatable="false">language</string>
    <string name="simulate_route_key" translatable="false">simulate_route</string>
    <string name="route_profile_key" translatable="false">route_profile</string>
    <string name="offline_version_key" translatable="false">offline_preference_key</string>
    <string name="error_route_not_available">Current route is not available</string>
    <string name="error_valid_route_not_found">Valid route not found.</string>


    <string name="title_mock_navigation">Mock Navigation</string>
    <string name="description_mock_navigation">Mock a navigation session using a mock location engine.</string>

    <string name="title_offboard_router_kotlin">Offboard Router Kotlin</string>
    <string name="description_offboard_router_kotlin">Shows routes using offboard routing api in Kotlin code.</string>

    <string name="title_offboard_router_java">Offboard Router Java</string>
    <string name="description_offboard_router_java">Shows routes using offboard routing api in Java code.</string>

    <string name="title_off_route_detection">Off route detection</string>
    <string name="description_off_route_detection">Uses the Route Utils class to determine if a users off route.</string>

    <string name="title_offline_reroute">Offline Reroute</string>
    <string name="description_offline_reroute">Test the offline reroute function inside the navigation SDK</string>

    <string name="title_offline_region_download">Offline region download</string>
    <string name="description_offline_region_download">Download offline routing tiles</string>

    <string name="title_reroute">Reroute</string>
    <string name="description_reroute">Test the reroute function inside the navigation SDK</string>

    <string name="title_navigation_route_ui">Navigation Map Route</string>
    <string name="description_navigation_route_ui">Shows different styles using NavigationMapRoute</string>

    <string name="title_navigation_launcher">Navigation Launcher</string>
    <string name="description_navigation_launcher">Drop-in UI experience</string>

    <string name="title_end_navigation">End Navigation</string>
    <string name="description_end_navigation">Shows how to end navigation using NavigationView</string>

    <string name="title_dual_navigation_map">Dual Navigation Map</string>
    <string name="description_dual_navigation_map">Shows how to add NavigationView and MapView in the same layout</string>

    <string name="title_waypoint_navigation">Waypoint Navigation</string>
    <string name="description_waypoint_navigation">Navigation with waypoints between destinations</string>

    <string name="title_embedded_navigation">Embedded Navigation</string>
    <string name="description_embedded_navigation">Navigation in a view which contains other views</string>

    <string name="title_fragment_navigation">NavigationView implemented with Fragment</string>
    <string name="description_fragment_navigation">NavigationView implemented with Fragment</string>

    <string name="title_component_navigation">MapboxNavigation with UI components</string>
    <string name="description_component_navigation">MapboxNavigation with UI components</string>

    <string name="simulate_route">Simulate Route</string>
    <string name="language">Language</string>
    <string name="unit_type">Unit Type</string>
    <string name="route_profile">Route Profile</string>

    <string name="unit_type_key" translatable="false">unit_type</string>

    <string name="default_route_profile">driving-traffic</string>
    <string name="view_examples_key" translatable="false">view_examples</string>
    <string name="git_hash_key" translatable="false">git_hash</string>
    <string name="offline_region_download" translatable="false">offline_region_download</string>
    <string name="offline_enabled" translatable="false">offline_region_download</string>
    <string name="current_night_mode" translatable="false">current_night_mode</string>
    <string name="was_in_tunnel" translatable="false">was_in_tunnel</string>
    <string name="was_navigation_stopped" translatable="false">was_navigation_stopped</string>


    <string name="explanation_long_press_waypoint">Long press map to place waypoint</string>
    <string name="offline_disabled">Offline Disabled</string>

    <string name="blue" translatable="false">#4264fb</string>

    <string name="hint_where_to">Where to?</string>
    <string name="autocompleteBehavior" translatable="false">com.creativeinfoway.smartstops.app.example.ui.autocomplete.AutocompleteBottomSheetBehavior</string>
    <string name="download_complete">Download is complete!</string>
    <string name="offline_routing">Offline routing</string>
    <string name="offline_enabled_title">Offline routing enabled</string>
    <string name="offline_category_title">Offline</string>
    <string name="offline_region_download_title">Download offline region</string>
    <string name="offline_version_title">Choose offline version</string>
    <string name="general_category_title">General</string>

    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <string name="capital">Capital: %1$s</string>
</resources>
