<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        tools:context=".activity.SignUpActivity">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/icon_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/be_in_the_know"
                android:textColor="@color/red"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/get_free_update_on_newly_added_locations"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/you_can_unsubscribe_any_time"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/act_signup_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/icon_user"
                android:drawableLeft="@drawable/icon_user"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />



            <EditText
                android:id="@+id/act_signup_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/icon_user"
                android:drawableLeft="@drawable/icon_user"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />


            <EditText
                android:id="@+id/act_signup_et_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/icon_country"
                android:drawableLeft="@drawable/icon_country"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/country"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/act_signup_et_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/icon_email"
                android:drawableLeft="@drawable/icon_email"
                android:drawablePadding="@dimen/_12sdp"
                android:hint="@string/email_id"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/act_signup_btn_signup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/button_bg_red"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <Button
                android:id="@+id/act_signup_btn_signin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"

                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/button_signin_color"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>