<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    >

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_alignParentTop="true"
        android:src="@drawable/icon_logo" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/warning"
            android:textColor="@color/red"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/warning_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />


        <TextView
            android:layout_marginTop="@dimen/_25sdp"
            android:id="@+id/tv_privacy_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="Read our Privacy Policy"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/act_warning_btn_agree"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@color/button_bg_red"
            android:text="@string/i_understand_and_agree"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>
</RelativeLayout>