<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        tools:context=".activity.LoginActivity">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/icon_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/act_login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_user"
                android:drawableLeft="@drawable/icon_user"
                android:drawablePadding="@dimen/_10sdp"
                android:text=""
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/email_id"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />


            <EditText
                android:id="@+id/act_login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_user"
                android:drawableLeft="@drawable/icon_user"
                android:drawablePadding="@dimen/_10sdp"
                android:text=""
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textSize="@dimen/_12sdp" />


            <Button
                android:id="@+id/act_login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/button_bg_red"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="OR"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />


            <Button
                android:id="@+id/btnWithoutLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/button_bg_red"
                android:text="Proceed without login"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <Button
                android:id="@+id/act_login_btn_signup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/button_signin_color"
                android:text="@string/login_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>